<resources>
    <string name="app_name">Crypto Rate</string>
    <string name="atualizar">Atualizar</string>
    <string name="atualizar_lista">Atualizar Lista</string>
    <string name="gerar_lista_rate">Gerar Lista</string>
    <string name="valor">Valor</string>
    <string name="ip">IP</string>
    <string name="criptomoeda_lbl">Criptomoeda</string>
    <string name="moeda_lbl">Moeda</string>
    <string name="rate_lbl">Valor: </string>
    <string name="rate_value"> 00.00 </string>

    <string-array name="moedas_name">
        <item>Coroa checa (Kč)</item>
        <item>Dinar barenita (.د.ب)</item>
        <item>Dólar canadiano ($)</item>
        <item>Dólar de Honguecongue ($)</item>
        <item>Florim húngaro (Ft)</item>
        <item>Iene japonês (¥)</item>
        <item>Iuane chinês (¥)</item>
        <item>Kwanza angolano (Kz)</item>
        <item>Lev búlgaro (лв)</item>
        <item>Libra esterlina[C] (£)</item>
        <item>Ngultrum butanês (Nu.)</item>
        <item>Paʻanga tonganesa (T$)</item>
        <item>Peso argentino ($)</item>
        <item>Peso chileno ($)</item>
        <item>Peso colombiano ($)</item>
        <item>Real (R$)</item>
        <item>Rupia indiana ()</item>
        <item>Rupia indonésia (Rp)</item>
        <item>Tengue cazaque (₸)</item>
    </string-array>

    <string-array name="moedas_iso_code_array">
        <item>CZK</item>
        <item>BHD</item>
        <item>CAD</item>
        <item>HKD</item>
        <item>HUF</item>
        <item>JPY</item>
        <item>CNY</item>
        <item>AOA</item>
        <item>BGN</item>
        <item>GBP</item>
        <item>BTN</item>
        <item>TOP</item>
        <item>ARS</item>
        <item>CLP</item>
        <item>COP</item>
        <item>BRL</item>
        <item>INR</item>
        <item>IDR</item>
        <item>KZT</item>
    </string-array>

    <string-array name="criptomoedas_name_array">
        <item>Bitcoin Cash</item>
        <item>Bitcoin</item>
        <item>Dash</item>
        <item>DigitalNote</item>
        <item>Dogecoin</item>
        <item>Emercoin</item>
        <item>EOS.IO</item>
        <item>Ethereum Classic</item>
        <item>Ethereum</item>
        <item>Litecoin</item>
        <item>Monero</item>
        <item>Nano</item>
        <item>NEM</item>
        <item>NEO</item>
        <item>Niobio Cash</item>
        <item>Nxt</item>
        <item>Peercoin</item>
        <item>Ripple</item>
        <item>Stellar</item>
        <item>Tether</item>
        <item>Verge</item>
        <item>Vertcoin</item>
        <item>Zcash</item>
    </string-array>

    <string-array name="criptomoedas_iso_code_array">
        <item>BCH</item>
        <item>BTC</item>
        <item>DASH</item>
        <item>XDN</item>
        <item>DOGE</item>
        <item>EMC</item>
        <item>EOS</item>
        <item>ETC</item>
        <item>ETH</item>
        <item>LTC</item>
        <item>XMR</item>
        <item>NANO</item>
        <item>XEM</item>
        <item>NEO</item>
        <item>NBR</item>
        <item>NXT</item>
        <item>PPC</item>
        <item>XRP</item>
        <item>XLM</item>
        <item>USDT</item>
        <item>XVG</item>
        <item>VTC</item>
        <item>ZEC</item>
    </string-array>

</resources>